@@ -19,6 +19,7 @@
  */
 package org.neo4j.codegen;
 
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 
 public class ClassHandle extends TypeReference
@@ -29,7 +30,7 @@ public class ClassHandle extends TypeReference
 
     ClassHandle( String packageName, String name, TypeReference parent, CodeGenerator generator, long generation )
     {
-        super( packageName, name, parent.isPrimitive(), parent.isArray(), false, "", Modifier.PUBLIC );
+        super( packageName, name, parent.isPrimitive(), parent.isArray(), false, null, Modifier.PUBLIC );
         this.parent = parent;
         this.generator = generator;
         this.generation = generation;
@@ -47,9 +48,11 @@ public class ClassHandle extends TypeReference
         return simpleName().hashCode();
     }
 
-    public Object newInstance() throws CompilationFailureException, IllegalAccessException, InstantiationException
+    public Object newInstance()
+            throws CompilationFailureException, IllegalAccessException, InstantiationException, NoSuchMethodException,
+            InvocationTargetException
     {
-        return loadClass().newInstance();
+        return loadClass().getConstructor().newInstance();
     }
 
     public Class<?> loadClass() throws CompilationFailureException
@@ -57,8 +60,18 @@ public class ClassHandle extends TypeReference
         return generator.loadClass( fullName(), generation );
     }
 
+    public Class<?> loadAnonymousClass() throws CompilationFailureException
+    {
+        return generator.loadAnonymousClass( fullName(), generation );
+    }
+
     public TypeReference parent()
     {
         return parent;
+    }
+
+    public CodeGenerator generator()
+    {
+        return generator;
     }
 }
